--- a/01_HTML/03_forms.html
+++ b/01_HTML/03_forms.html
@@ -37,5 +37,30 @@
     <button>Submit</button>
     <input type="submit" value="click me">
   </form>
+
+  <h1>Hijacking Searches</h1>
+  <hr>
+  <h3>Reddit</h3>
+  <form action="https://www.reddit.com/search" method="get">
+    <p>
+      <input type="text" name="q">
+      <button>Search Reddit</button>
+    </p>
+  </form>
+  <hr>
+  <h3>Google</h3>
+  <form action="https://www.google.com/search" method="get">
+    <p>
+      <input type="text" name="q">
+      <button>Search Google</button>
+    </p>
+  </form>
+  <hr>
+  <h3>Youtube</h3>
+  <form action="https://www.youtube.com/results" method="get">
+    <p> <input type="text" name="search_query">
+      <button>Search Youtube</button>
+    </p>
+  </form>
 </body>
 </html>
