--- a/01_HTML/03_forms.html
+++ b/01_HTML/03_forms.html
@@ -62,5 +62,44 @@
       <button>Search Youtube</button>
     </p>
   </form>
+
+  <h2>More inputs!</h2>
+  <form action="">
+    <div>
+      <input type="checkbox" name="agree_tos" id="agree">
+      <label for="agree">I agree to everything</label>
+    </div>
+    <div>
+      <input type="checkbox" name="agree_tos_ch" id="agree_ch" checked>
+      <label for="agree_ch">I agree to everything, already checked</label>
+    </div>
+    <div>
+      <label for="xs">XS:</label>
+      <input type="radio" name="size" id="xs" value="xs">
+      <label for="s">S:</label>
+      <input type="radio" name="size" id="s" value="s">
+      <label for="m">M:</label>
+      <input type="radio" name="size" id="m" value="m">
+    </div>
+    <div>
+      <label for="meal">Please Select an Entree</label>
+      <select name="meal" id="meal">
+        <option value="">--Please select an option--</option>
+        <option value="fish">Fish</option>
+        <option value="veg" selected>Vegetarian</option>
+        <option value="steak">Steak</option>
+      </select>
+    </div>
+    <div>
+      <label for="cheese">Amount of cheese:</label>
+      <input type="range" name="cheese_level" id="cheese" min="1" max="100" step="7" value="75">
+    </div>
+    <div>
+      <label for="request">Any special requests?</label>
+      <br>
+      <textarea name="request" id="request" cols="30" rows="10" placeholder="Type something here"></textarea>
+    </div>
+    <button>Submit</button>
+  </form>
 </body>
 </html>
