--- a/01_HTML/03_forms.html
+++ b/01_HTML/03_forms.html
@@ -101,5 +101,26 @@
     </div>
     <button>Submit</button>
   </form>
+
+  <h2>Validation Demo</h2>
+  <form action="">
+    <div>
+      <label for="first">Enter First Name:</label>
+      <input type="text" name="first" id="first" required>
+    </div>
+    <div>
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username" required minlength="5" maxlength="15">
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" required>
+    </div>
+    <div>
+      <label for="url">URL:</label>
+      <input type="url" name="url" id="url" required>
+    </div>
+    <button>Submit</button>
+  </form>
 </body>
 </html>
