updates and css

--- a/01_HTML/03_forms.html
+++ b/01_HTML/03_forms.html
@@ -64,7 +64,7 @@
   </form>
 
   <h2>More inputs!</h2>
-  <form action="">
+  <form action="/">
     <div>
       <input type="checkbox" name="agree_tos" id="agree">
       <label for="agree">I agree to everything</label>
@@ -91,8 +91,8 @@
       </select>
     </div>
     <div>
-      <label for="cheese">Amount of cheese:</label>
-      <input type="range" name="cheese_level" id="cheese" min="1" max="100" step="7" value="75">
+      <label for="cheeseAmount">Amount of cheese:</label>
+      <input type="range" name="cheese_level" id="cheeseAmount" min="1" max="100" step="7" value="75">
     </div>
     <div>
       <label for="request">Any special requests?</label>
@@ -103,14 +103,14 @@
   </form>
 
   <h2>Validation Demo</h2>
-  <form action="">
+  <form action="/">
     <div>
       <label for="first">Enter First Name:</label>
       <input type="text" name="first" id="first" required>
     </div>
     <div>
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required minlength="5" maxlength="15">
+      <label for="usernameValidation">Username:</label>
+      <input type="text" name="username" id="usernameValidation" required minlength="5" maxlength="15">
     </div>
     <div>
       <label for="email">Email:</label>
