--- a/01_HTML/04_formExercise.html
+++ b/01_HTML/04_formExercise.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Race Registration!</h1>
-  <form action="">
+  <form action="/">
     <div>
       <label for="first">First Name </label>
       <input type="text" name="firstName" id="first" required>
@@ -39,7 +39,7 @@
     </div>
     <div>
       <label for="ageGroup">Select Age Group</label>
-      <select name="age" id="ageGroup" required>
+      <select name="age" id="ageGroup">
         <option value="u18">under 18</option>
         <option value="elite">18-30</option>
         <option value="vet30">30-50</option>
