--- a/03_Bootstrap/01_intro.html
+++ b/03_Bootstrap/01_intro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,141 @@
       <div class="col-3 bg-info">I am 3 units</div>
       <div class="col-6 bg-warning">I am 6 units</div>
       <div class="col-3 bg-info">I am 3 units</div>
-      
+    </div>
+    <div class="row">
+      <div class="col bg-primary">I am auto sized</div>
+      <div class="col bg-secondary">I am auto sized</div>
+      <div class="col bg-primary">I am auto sized</div>
+      <div class="col bg-secondary">I am auto sized</div>
+    </div>
+    <h2 class="display-4 mt-3">Responsive Grid</h2>
+    <div class="row">
+      <div class="col-md-6 col-xl-3 bg-info">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-success">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-info">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-success">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+    </div>
+    <h2 class="display-4 mt-3">Responsive Images</h2>
+    <div class="row">
+      <div class="col-sm-6 col-lg-4"><img class="img-fluid" src="https://images.unsplash.com/photo-1601196484466-06780294257a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80" alt=""></div>
+      <div class="col-sm-6 col-lg-4"><img class="img-fluid" src="https://images.unsplash.com/photo-1601196465457-6cdba190c937?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80" alt=""></div>
+      <div class="col-sm-6 col-lg-4"><img class="img-fluid" src="https://images.unsplash.com/photo-1601196926572-a251b7193e89?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80" alt=""></div>
+    </div>
+    <h2 class="display-4 mt-3">Grid Alignment</h2>
+    <div class="row align-items-center">
+      <div class="col-md-6 col-xl-3 bg-danger">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-warning">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-info">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+      <div class="col-md-6 col-xl-3 bg-success">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rerum, alias ratione in autem maxime impedit ut praesentium voluptatibus incidunt corporis recusandae voluptatem. Laboriosam maxime magni cumque expedita. Modi, quisquam.
+      </div>
+    </div>
+    <h3>Justify Content</h3>
+    <div class="row border justify-content-center justify-content-lg-start justify-content-xl-between">
+      <div class="col-md-4 bg-primary">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum amet rem odit, molestias fugit tempora sequi doloremque quibusdam vel, commodi molestiae eum. Quisquam odio voluptas animi explicabo, et ratione facere?
+      </div>
+      <div class="col-md-4 bg-info">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum amet rem odit, molestias fugit tempora sequi doloremque quibusdam vel, commodi molestiae eum. Quisquam odio voluptas animi explicabo, et ratione facere?
+      </div>
+    </div>
+
+    <h2 class="display-4 mt-3">Forms</h2>
+    <form action="/">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="address">Street Adress</label>
+        <input type="text" name="streetAddress" id="address" class="form-control" placeholder="926 State Av.">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="city">City</label>
+          <input type="text" name="city" id="city" class="form-control" placeholder="Lost Heaven">
+        </div>
+        <div class="form-group col-md-3 col-6">
+          <label for="state">State</label>
+          <select name="state" id="state" class="form-control">
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+          </select>
+        </div>
+        <div class="form-group col-md-3 col-6">
+          <label for="zip">Zip Code</label>
+          <input type="text" name="zip" id="zip" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="tos">
+          <label class="custom-control-label" for="tos">I agree to everything</label>
+        </div>
+      </div>
+      <button class="btn btn-success" type="submit">Register</button>
+    </form>
+
+    <h2 class="display-4 mt-3">Navbar</h2>
+    <nav class="navbar navbar-light bg-info navbar-expand-lg">
+      <a href="" class="navbar-brand">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a href="#" class="nav-item nav-link">Home</a>
+          <a href="#" class="nav-item nav-link">About</a>
+          <a href="#" class="nav-item nav-link">Contact</a>
+        </div>
+        <form class="form-inline ml-auto">
+          <input type="search" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <h2 class="display-4 mt-3">Icons <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-music-note-beamed" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
+      <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
+      <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
+    </svg></h2>
+    <button class="btn btn-lg btn-danger">Delete <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+      <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+    </svg></button>
+    <div class="row">
+      <div class="col-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+            </svg></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+      </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
