--- a/03_Bootstrap/02_project.html
+++ b/03_Bootstrap/02_project.html
@@ -39,26 +39,34 @@
       </div>
     </div>
   </nav>
-  <main class="container text-white">
-    <div class="row landingPage justify-content-center align-items-center text-center" id="bg1">
-      <div class="col-6">
-        <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
-        <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
-        <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
-        <p class="mb-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
-        <div class="row">
-          <div class="col">
-            <button class="btn btn-outline-primary">Discover More</button>
-          </div>
-          <div class="col">
-            <button class="btn btn-primary">Order Bike</button>
+  <main class="container-fluid text-white border-bottom">
+    <div class="container">
+      <div class="row landingPage justify-content-center align-items-center text-center" id="bg1">
+        <div class="col-5">
+          <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
+          <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
+          <p class="my-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
+          <p class="mb-0">BIKE<span class="yellowText">/</span>OF<span class="yellowText">/</span>THE<span class="yellowText">/</span>YEAR</p>
+          <div class="row">
+            <div class="col">
+              <button class="btn btn-outline-primary">Discover More</button>
+            </div>
+            <div class="col">
+              <button class="btn btn-primary">Order Bike</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-6">
+        <div class="col-7">
+          <img src="02_project/bg1.jpg" alt="">
+        </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-6">Img</div>
+      <div class="col-6 bg-info">Text</div>
+    </div>
   </main>
+  
   
   <!-- Bootstrap included scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
