arrays and objects

--- a/04_Javascript/01_basics.html
+++ b/04_Javascript/01_basics.html
@@ -11,6 +11,7 @@
     <li>Connecting</li>
     <li>Conditionals</li>
     <li>Arrays</li>
+    <li>Objects</li>
   </ol>
   <script src="01_basics.js"></script>
 </body>
