functions and methods

--- a/04_Javascript/01_basics.html
+++ b/04_Javascript/01_basics.html
@@ -12,6 +12,14 @@
     <li>Conditionals</li>
     <li>Arrays</li>
     <li>Objects</li>
+    <li>Loops
+      <ul>
+        <li>For loops</li>
+        <li>While loops</li>
+        <li>For Of loops</li>
+        <li>For In loops</li>
+      </ul>
+    </li>
   </ol>
   <script src="01_basics.js"></script>
 </body>
