--- a/09_Express/04_REST/getpost.html
+++ b/09_Express/04_REST/getpost.html
@@ -6,7 +6,7 @@
   <title>REST</title>
 </head>
 <body>
-  <h1>GET & POST requests</h1>
+  <h1>GET and POST requests</h1>
   <h2>GET</h2>
   <form action="http://localhost:3000/tacos" method="GET">
     <input type="text" name="meat">
